# Client-Onboarding-RAG-Chatbot

./: .gitignore  README.md  app.py  assistant.py  gui.py  main.py  prompt.py  pyproject.toml  requirements.txt
auth/: auth_utils.py  login.py  signup.py
data/: employees.py  questions.txt
database/: db.py  seed_employees.py  test_db_conn.py
voice/: speech_to_text.py  text_to_speech.py
